fix overlapping item menu bug

--- a/app/assets/stylesheets/user-styles.css.scss
+++ b/app/assets/stylesheets/user-styles.css.scss
@@ -197,4 +197,8 @@
   a {
     margin: 0 auto;
   }
+
+  &.element-icon {
+    padding: 0;
+  }
 }
